[package]
name = "calcite-viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
pest = "2.5"
pest_derive = "2.5"
serde_json = "1.0"
warp = "0.3"
nom = "7.1.3"
